Fixed alignment issue with about divider
See screenshots for pull request

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,7 +166,8 @@
 
   .about__devider {
     font-size: 100%;
-    letter-spacing: 9.09px; }
+    letter-spacing: 9.09px;
+    text-indent: 9.09px;}
 
   .about__text {
     font-size: 100%; }
